--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kirim Pesan ke Marsha 💌</title>
+  <title>Admin Marsha - Daftar Pesan 💌</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -16,12 +16,12 @@
       overflow: hidden;
     }
 
-    .card {
+    .admin-card {
       background: white;
       border-radius: 20px;
       padding: 30px;
       width: 90%;
-      max-width: 400px;
+      max-width: 500px;
       box-shadow: 0 8px 20px rgba(120, 80, 180, 0.2);
       text-align: center;
       animation: popIn 0.5s ease-out;
@@ -33,60 +33,39 @@
       color: #5c3fad;
       margin-bottom: 20px;
       font-size: 2rem;
-      animation: fadeIn 2s ease-in-out forwards;
     }
 
-    h1 span {
+    .message-list {
+      max-height: 400px;
+      overflow-y: auto;
+      margin-top: 20px;
+      text-align: left;
+      padding: 10px;
+      border-radius: 12px;
+      background-color: #f1f1f1;
+      box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .message {
+      background-color: #ffffff;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .message .time {
+      font-size: 0.9rem;
       color: #7e57c2;
     }
 
-    textarea {
-      width: 100%;
-      padding: 15px;
-      border: 2px solid #c3aef7;
-      border-radius: 12px;
-      resize: none;
-      height: 120px;
+    .message .content {
+      margin-top: 10px;
       font-size: 1rem;
     }
 
-    button {
-      margin-top: 15px;
-      width: 100%;
-      padding: 12px;
-      background-color: #7e57c2;
-      color: white;
-      font-weight: bold;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      position: relative;
-      transition: transform 0.3s;
-    }
-
-    button:hover {
-      background-color: #673ab7;
-      transform: scale(1.05);
-    }
-
-    button:active {
-      transform: scale(0.95);
-    }
-
-    .success {
-      color: #4caf50;
+    .message .sticker {
       margin-top: 10px;
-      display: none;
-      animation: bubbleUp 1s ease-out;
-    }
-
-    .greeting {
-      font-size: 1.5rem;
-      color: #7e57c2;
-      font-weight: bold;
-      margin-bottom: 20px;
-      display: none;
-      animation: fadeInGreeting 2s ease-out forwards;
     }
 
     @keyframes popIn {
@@ -94,72 +73,49 @@
       to { opacity: 1; transform: scale(1); }
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes fadeInGreeting {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes bubbleUp {
-      from { transform: translateY(10px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
     @media (max-width: 600px) {
-      .card {
+      .admin-card {
         padding: 20px;
         max-width: 90%;
       }
     }
+
   </style>
 </head>
 <body>
-  <div class="card">
-    <div class="greeting" id="greeting">Halo! 👋 Marsha akan membaca pesan rahasiamu 💌</div>
-    <h1>Kirim Pesan ke <span>Marsha</span> 💌</h1>
-    <textarea id="pesan" placeholder="Tulis pesan rahasiamu di sini..."></textarea>
-
-    <button onclick="kirimPesan()">Kirim Pesan</button>
-    <p id="info" class="success"></p>
+  <div class="admin-card">
+    <h1>Daftar Pesan untuk Marsha 💌</h1>
+    <div class="message-list" id="message-list">
+      <!-- Pesan akan dimuat di sini -->
+    </div>
   </div>
 
-  <audio id="sound" src="https://www.soundjay.com/button/beep-07.wav"></audio>
-
   <script>
-    // Show greeting animation
     window.onload = function() {
-      setTimeout(function() {
-        document.getElementById('greeting').style.display = 'block';
-      }, 500); // Delay before showing greeting
-    };
-
-    function kirimPesan() {
-      const pesan = document.getElementById('pesan').value.trim();
-
-      if (!pesan) {
-        alert('Pesan tidak boleh kosong!');
-        return;
-      }
-
+      // Mengambil daftar pesan yang sudah terkirim dari LocalStorage
       const pesanSebelumnya = JSON.parse(localStorage.getItem('pesanUntukMarsha') || '[]');
-      pesanSebelumnya.push({ isi: pesan, waktu: new Date().toISOString() });
-      localStorage.setItem('pesanUntukMarsha', JSON.stringify(pesanSebelumnya));
+      const messageList = document.getElementById('message-list');
 
-      // Play sound effect
-      document.getElementById('sound').play();
+      if (pesanSebelumnya.length === 0) {
+        messageList.innerHTML = '<p>Belum ada pesan yang terkirim.</p>';
+      } else {
+        // Menampilkan pesan dengan urutan terbaru
+        pesanSebelumnya.reverse().forEach(pesan => {
+          const messageElement = document.createElement('div');
+          messageElement.classList.add('message');
 
-      // Show success message with animation
-      const info = document.getElementById('info');
-      info.textContent = `Pesanmu terkirim! 💌`;
-      info.classList.remove('hidden');
-      setTimeout(() => info.classList.add('hidden'), 3000);  // Hide after 3 seconds
+          const time = new Date(pesan.waktu);
+          const formattedTime = `${time.toLocaleDateString()} ${time.toLocaleTimeString()}`;
 
-      // Reset form
-      document.getElementById('pesan').value = '';
+          messageElement.innerHTML = `
+            <div class="time">Dikirim pada: ${formattedTime}</div>
+            <div class="content">${pesan.isi}</div>
+            <div class="sticker">${pesan.sticker ? `Stiker: ${pesan.sticker}` : ''}</div>
+          `;
+
+          messageList.appendChild(messageElement);
+        });
+      }
     }
   </script>
 </body>
